# smooth-tracker

./: LICENSE  README.md  pyproject.toml
smooth_tracker/: __init__.py  smooth_tracker.py
smooth_tracker/filters/: __init__.py  fading.py
tests/: conftest.py  test_tracker.py
